// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isset assign 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": Isset {
          "kind": "isset",
          "variables": Array [
            Variable {
              "curly": false,
              "kind": "variable",
              "name": "var",
            },
          ],
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`isset multiple 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Isset {
        "kind": "isset",
        "variables": Array [
          Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
        ],
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`isset simple 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Isset {
        "kind": "isset",
        "variables": Array [
          Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
        ],
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`isset test errors 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": Isset {
          "kind": "isset",
          "variables": Array [
            undefined,
          ],
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [
    Error {
      "expected": "EXPR",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected ')' on line 1",
      "token": "')'",
    },
    Error {
      "expected": ")",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected ';', expecting ')' on line 1",
      "token": "';'",
    },
  ],
  "kind": "program",
}
`;

exports[`isset trailing comma #2 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Isset {
        "kind": "isset",
        "variables": Array [
          Variable {
            "curly": false,
            "kind": "variable",
            "name": "foo",
          },
          Variable {
            "curly": false,
            "kind": "variable",
            "name": "bar",
          },
        ],
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`isset trailing comma 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Isset {
        "kind": "isset",
        "variables": Array [
          Variable {
            "curly": false,
            "kind": "variable",
            "name": "foo",
          },
        ],
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
